# anura

./: .gitignore  .gitmodules  Cargo.toml
anura/: Cargo.toml
anura/src/: app.rs  arena.rs  context.rs  error.rs  font.rs  input.rs  lib.rs  uitree.rs  view.rs
anura/src/graphics/: default_impls.rs  mod.rs
anura/src/widget/: image.rs  mod.rs  text.rs  vertical_con.rs
indigo/: Cargo.toml
indigo-wgpu/: Cargo.toml
indigo-wgpu/src/: camera.rs  lib.rs  mesh.rs  renderer.rs  shader.rs  texture.rs  uniform.rs  vertex.rs
indigo-wgpu/src/shaders/: main.wgsl
indigo/src/: app.rs  arena.rs  context.rs  drawable.rs  error.rs  event.rs  font.rs  graphics.rs  handle.rs  input.rs  lib.rs  uitree.rs  view.rs  widget.rs
indigo/src/drawable/: quad.rs  text.rs
indigo/src/graphics/: default_impls.rs  mod.rs
indigo/src/shaders/: image.wgsl  main.wgsl  plain.wgsl
indigo/src/widget/: image.rs  mod.rs  text.rs  vertical_con.rs
playground/: Cargo.toml  input.txt
playground/src/: app.rs  main.rs  testwidget.rs  view.rs
