[package]
name = "indigo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.5"
downcast-rs = "1.2.0"
better_any = "0.2.0"

indigo-wgpu = { path = "../indigo-wgpu", optional = true }

[features]
default = ["wgpu-renderer"]
wgpu-renderer = ["dep:indigo-wgpu"]
