[package]
name = "indigo"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.27.5"
downcast-rs = "1.2.0"
bytemuck = { version = "1.13.0", features = [ "derive" ] }
relative-path = "1.7.3"


indigo-wgpu = { path = "../indigo-wgpu", optional = true }
ahash = { version = "0.8.3", optional = true }

#remove this later
rand = "0.8.5"

[features]
default = ["wgpu-renderer"]
wgpu-renderer = ["dep:indigo-wgpu", "dep:ahash"]

#add a default widgets feature