[package]
name = "indigo"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.27.5"
downcast-rs = "1.2.0"
bytemuck = { version = "1.13.0", features = [ "derive" ] }
relative-path = "1.7.3"
fontdue = "0.7.2"
ahash = "0.8.3"
ordered-float = "3.4.0"

wgduck = { path = "../wgduck", optional = true }
image = { version = "0.24.5", optional = true }

#remove this later
rand = "0.8.5"

[features]
default = ["wgpu-renderer"]
wgpu-renderer = ["dep:wgduck", "dep:image"]

#add a default widgets feature